<resources>
    <string name="app_name">Indian News Room</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="navigation_icon">Navigation Icon</string>
    <string name="app_logo">App logo</string>
    <string name="noInternet">No Internet Connections\nCheck your Internet Connection and restart your App</string>
    <string name="no_internet_image">No Internet Image</string>
    <string name="big_post_image">Big Post Image</string>


    <string name="HomeCategory">होम</string>
    <string name="ReligionCategory">धर्म-कर्म</string>
    <string name="LifeStyleCategory">लाइफस्टाइल</string>
    <string name="Entertainment">मनोरंजन</string>
    <string name="dilchasp">दिलचस्प</string>
    <string name="gameAndPlayer">खेल जगत</string>
    <string name="sciTech">विज्ञान और तकनीक</string>
    <string name="spiritual">अध्यात्म</string>
    <string name="astrology">राशिफल</string>
    <string name="lent_and_festival">व्रत और त्यौहार</string>
    <string name="vastu_ahastra">वास्तु</string>
    <string name="chanakya_niti">चाणक्य नीति</string>
    <string name="all">All</string>
    <string name="health">स्वास्थ्य</string>
    <string name="relationship">रिलेशनशिप</string>
    <string name="fashion_and_styles">फैशन</string>
    <string name="tour_and_travel">यात्रा</string>
    <string name="ghrelu_nuskhe">खाना-खजाना</string>
    <string name="food_and_recipes">खाना-खजाना</string>
    <string name="tv_and_serial">टेलीविजन</string>
    <string name="bollywood_cinema">बॉलीवुड</string>
    <string name="humour">हंसी-ठट्ठा</string>
    <string name="national_news">देश</string>
    <string name="internation_news">विदेश</string>
    <string name="viral_news">वायरल</string>
    <string name="social_media">सोशल मीडिया</string>
    <string name="web_footer_notice">Copyright © 2021 Indian News Room. All Right Reserved</string>
    <string name="breaking">ब्रेकिंग न्यूज</string>
    <string name="latestnew">खबरें</string>
    <string name="general">सामान्य ज्ञान</string>
    <string name="categories">Categories</string>
    <string name="search_post">Search post</string>


    <string-array name="categories">
        <item>धर्म-कर्म</item>
        <item>लाइफस्टाइल</item>
        <item>मनोरंजन</item>
        <item>दिलचस्प</item>
        <item>खेल जगत</item>
        <item>विज्ञान और तकनीक</item>
        <item>अध्यात्म</item>
        <item>राशिफल</item>
        <item>व्रत और त्यौहार</item>
        <item>वास्तु</item>
        <item>चाणक्य नीति</item>
        <item>स्वास्थ्य</item>
        <item>रिलेशनशिप</item>
        <item>फैशन</item>
        <item>यात्रा</item>
        <item>खाना-खजाना</item>
        <item>खाना-खजाना</item>
        <item>टेलीविजन</item>
        <item>बॉलीवुड</item>
        <item>हंसी-ठट्ठा</item>
        <item>देश</item>
        <item>विदेश</item>
        <item>वायरल</item>
        <item>सोशल मीडिया</item>
    </string-array>

</resources>