<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/mainTabGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_home111"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HomeCategory" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ReligionCategory" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LifeStyleCategory" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Entertainment" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dilchasp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameAndPlayer" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab71"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sciTech" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerHome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTabGroup" />

<!--    <fragment-->
<!--        android:id="@+id/fragmentHost"-->
<!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:defaultNavHost="true"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:navGraph="@navigation/mobile_navigation" />-->
</androidx.constraintlayout.widget.ConstraintLayout>